[project]
name = "crucible-postprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "google-auth-oauthlib>=1.4.0",
    "google-cloud-secret-manager>=2.29.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "mfid>=1.0.0",
    "nano-crucible==2.1.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pika>=1.4.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scipy>=1.17.1",
]

[tool.uv.sources]
nano-crucible = { git = "https://github.com/MolecularFoundryCrucible/nano-crucible", rev = "dev" }
